:books: adicionando recursos ao readme